Creating a new branch that will use a single div for carousel track

--- a/04-14-2022/CocktailDB-API/index.html
+++ b/04-14-2022/CocktailDB-API/index.html
@@ -39,33 +39,16 @@
 			</button>
 			<div class="carousel__track-container">
 				<ul class="carousel__track">
-					<!-- <li class="carousel__slide current-slide">
+					<li class="carousel__slide current-slide">
 						<img
 							class="carousel__image"
-							src="https://www.thecocktaildb.com/images/media/drink/yqvvqs1475667388.jpg"
+							src="img/sergio-alves-santos-OxKFC5u0980-unsplash.jpg"
 							alt=""
 							srcset=""
 						/>
-						<h2 id="previousDrinkName"></h2>
+						<h2 id="drinkName">Your next drink..</h2>
+						<p id="drinkDirections">Directions to </p>
 					</li>
-					<li class="carousel__slide">
-						<img
-							class="carousel__image"
-							src="https://www.thecocktaildb.com/images/media/drink/ywxwqs1461867097.jpg"
-							alt=""
-							srcset=""
-						/>
-						<h2 id="currentDrinkName"></h2>
-					</li>
-					<li class="carousel__slide">
-						<img
-							class="carousel__image"
-							src="https://www.thecocktaildb.com/images/media/drink/qyyvtu1468878544.jpg"
-							alt=""
-							srcset=""
-						/>
-						<h2 id="nextDrinkName"></h2>
-					</li> -->
 				</ul>
 			</div>
 			<button class="carousel__button carousel__button--right">
